attempting fix for hamburger menus on iphone

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -220,6 +220,40 @@
   #ham_toggled {
     display: none;
   }
+
+  
+  .dropdown-content {
+    display: none;
+    position: fixed;
+    background-color: #f9f9f9;
+    /* min-width: 160px; */
+    /* margin: 0.075vw 0 0 0; */
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 94;
+  }
+
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+
+  .nav_right a:hover, .dropdown:hover .dropbtn {
+    /* background-color: #555; */
+    color: white;
+  }
+
+  .dropdown-content a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
 }
 
 
